# looop-researcher

./: .gitignore  AGENTS.md  README.md  module.json  pyproject.toml
docs/logs/: 2026-06-23-gemma4-modelfile.md  2026-06-23-initial-ml-environment.md
ollama/: Modelfile.gemma4-researcher
scripts/: check_env.py
src/looop_researcher/: __init__.py
tests/: test_environment.py
