[project]
name = "looop-researcher"
version = "0.1.0"
description = "Local automatic research loops over codebases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "ollama>=0.4",
    "pandas>=2.2",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "torch>=2.4",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
